--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
 
+	<script type="text/javascript" src="JavaScript/jquery.min.js"></script>
 </head>
 
 <body>
