making some changes

--- a/index.html
+++ b/index.html
@@ -6,8 +6,8 @@
     <meta charset="utf-8" />
     <meta http-equiv="Content-type" content="text/html; charset=utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
-
-	<script type="text/javascript" src="JavaScript/jquery.min.js"></script>
+    
+    <script type="text/javascript" src="JavaScript/jquery.min.js"></script>
 </head>
 
 <body>
@@ -30,7 +30,29 @@
 		 	</ul>
 		 
 		</div>
-	
+		
+		<div class="clear"> </div>
+		
+		<div class="codeContainer" id="HTMLContainer">
+			<div class="codeLabel">HTML</div>
+			<textarea id="htmlcode"></textarea>
+		</div>
+		
+		<div class="codeContainer" id="CSSContainer">
+			<div class="codeLabel">CSS</div>
+			<textarea id="csscode"></textarea>
+		</div>
+		
+		<div class="codeContainer" id="ResultContainer">
+			<div class="codeLabel">Result</div>
+			<iframe> </iframe>
+		</div>
+		
+		<div class="clear"></div>
+		 	<div id="copyr">
+		 		&copy SunyamBagga
+		 	</div>
+
 	</div>
 </body>
 
